src/main/java/com/example/solid/liskovSubsituation/bad/SavingsAccount.java
package com.example.solid.liskovSubsituation.bad;

import java.math.BigDecimal;

public class SavingsAccount extends Account {

    @Override
    void deposit(BigDecimal amount) {

    }

    @Override
    void withdraw(BigDecimal amount) {

    }
}
